unpackaged/main/default/objects/Case/fields/Insurance_Policy_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked related Insurance Policy Transaction record</description>
    <label>Insurance Policy Transaction</label>
    <referenceTo>InsurancePolicyTransaction</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>