unpackaged/main/default/objects/Case/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <description>Used to record investigation details</description>
    <inlineHelpText>Record here any notes related to the complaint investigation</inlineHelpText>
    <label>Investigation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>