unpackaged/main/default/objects/Case/fields/isAssignedToAgent__c.field-meta.xml
<CustomField>
    <fullName>isAssignedToAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be updated by the flow when case is re-assigned from the queue to an agent for the first time.</description>
    <label>isAssignedToAgent</label>
    <type>Checkbox</type>
</CustomField>