unpackaged/main/default/objects/Case/fields/Justification_for_Decision__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Decision__c</fullName>
    <label>Justification for Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>