unpackaged/main/default/objects/Case/fields/Lapsed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Reason__c</fullName>
    <description>Why didn&#39;t renew</description>
    <inlineHelpText>Why didn&#39;t renew</inlineHelpText>
    <label>Lapsed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Doesn&#39;t have receipts</fullName>
            </value>
            <value>
                <fullName>Going to another provider</fullName>
            </value>
            <value>
                <fullName>No longer trading</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>