unpackaged/main/default/objects/Case/fields/Limit_of_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Limit_of_Indemnity__c</fullName>
    <inlineHelpText>Cover amount if Additional Product has been selected</inlineHelpText>
    <label>Limit of Indemnity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1K</fullName>
            </value>
            <value>
                <fullName>5K</fullName>
            </value>
            <value>
                <fullName>10K</fullName>
            </value>
            <value>
                <fullName>15K</fullName>
            </value>
            <value>
                <fullName>20K</fullName>
            </value>
            <value>
                <fullName>25K</fullName>
            </value>
            <value>
                <fullName>50K</fullName>
            </value>
            <value>
                <fullName>100K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>