unpackaged/main/default/objects/Case/fields/Named_Driver_1__c.field-meta.xml
<CustomField>
    <fullName>Named_Driver_1__c</fullName>
    <inlineHelpText>1st Name Driver file link</inlineHelpText>
    <label>Named Driver 1</label>
    <type>Url</type>
</CustomField>