unpackaged/main/default/objects/Case/fields/Named_Driver_2__c.field-meta.xml
<CustomField>
    <fullName>Named_Driver_2__c</fullName>
    <inlineHelpText>2nd Name Driver file link</inlineHelpText>
    <label>Named Driver 2</label>
    <type>Url</type>
</CustomField>