unpackaged/main/default/objects/Case/fields/Named_Driver_3__c.field-meta.xml
<CustomField>
    <fullName>Named_Driver_3__c</fullName>
    <inlineHelpText>3rd Name Driver file link</inlineHelpText>
    <label>Named Driver 3</label>
    <type>Url</type>
</CustomField>