unpackaged/main/default/objects/Case/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <inlineHelpText>URL link to Minifleet payload file</inlineHelpText>
    <label>Payload</label>
    <type>Url</type>
</CustomField>