unpackaged/main/default/objects/Case/fields/Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name__c</fullName>
    <description>The name of the potential customer the broker is quoting on the portal</description>
    <inlineHelpText>The name of the potential customer the broker is quoting on the portal</inlineHelpText>
    <label>Policy Holder Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>