unpackaged/main/default/objects/Case/fields/Policy_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Inception_Date__c</fullName>
    <inlineHelpText>Date when policy officially begins</inlineHelpText>
    <label>Policy Inception Date</label>
    <type>Date</type>
</CustomField>