unpackaged/main/default/objects/Case/fields/Policy_Number_Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_Quote_Reference__c</fullName>
    <description>This will capture Policy Number or Quote Reference from the web form</description>
    <inlineHelpText>As captured on webform</inlineHelpText>
    <label>Policy Number/Quote Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>