unpackaged/main/default/objects/Case/fields/Policy_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Renewal_Date__c</fullName>
    <description>Updated via flow for Failed Renewal case record types to capture related Insurance Policy renewal date</description>
    <label>Policy Renewal Date</label>
    <type>Date</type>
</CustomField>