unpackaged/main/default/objects/Case/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>Postcode associated with the policy</description>
    <inlineHelpText>Postcode associated with the policy</inlineHelpText>
    <label>Postcode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>