unpackaged/main/default/objects/Case/fields/Postcode_Match__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Postcode provided by the customer in the online form matches the postcode on record</description>
    <label>Postcode Match</label>
    <type>Checkbox</type>
</CustomField>