unpackaged/main/default/objects/Case/fields/Premium_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Premium_Quoted__c</fullName>
    <inlineHelpText>Use this field to record what broker is being quoted</inlineHelpText>
    <label>Premium Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>