unpackaged/main/default/objects/Case/fields/Premium_Write_off__c.field-meta.xml
<CustomField>
    <fullName>Premium_Write_off__c</fullName>
    <inlineHelpText>Premium amount which was written off due to Admiral Business error</inlineHelpText>
    <label>Premium Write off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>