unpackaged/main/default/objects/Case/fields/Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Reference__c</fullName>
    <description>Original quote reference from CDL</description>
    <externalId>true</externalId>
    <inlineHelpText>Original quote reference from CDL</inlineHelpText>
    <label>Quote Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>