unpackaged/main/default/objects/Case/fields/Resolution_Offered__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Offered__c</fullName>
    <label>Resolution Offered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>