unpackaged/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <inlineHelpText>What caused the complaint?</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Human error</fullName>
            </value>
            <value>
                <fullName>System error</fullName>
            </value>
            <value>
                <fullName>Process Error (lack or absence)</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Not Upheld</fullName>
                <isActive>false</isActive>
                <label>Not Upheld</label>
            </value>
            <value>
                <fullName>Not Yet Determined</fullName>
                <isActive>false</isActive>
                <label>Not Yet Determined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>