unpackaged/main/default/objects/Case/fields/Run_Owner_Check__c.field-meta.xml
<CustomField>
    <fullName>Run_Owner_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by scheduled path in the record triggered flow, to trigger another flow which runs a check on Case ownership.</description>
    <label>Run Owner Check</label>
    <type>Checkbox</type>
</CustomField>