unpackaged/main/default/objects/Case/fields/Supporting_Materials_1__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Materials_1__c</fullName>
    <inlineHelpText>1st Supporting Materials file link</inlineHelpText>
    <label>Supporting Materials 1</label>
    <type>Url</type>
</CustomField>