unpackaged/main/default/objects/Case/fields/Supporting_Materials_2__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Materials_2__c</fullName>
    <inlineHelpText>2nd Supporting Materials file link</inlineHelpText>
    <label>Supporting Materials 2</label>
    <type>Url</type>
</CustomField>