unpackaged/main/default/objects/Case/fields/Target_Premium__c.field-meta.xml
<CustomField>
    <fullName>Target_Premium__c</fullName>
    <inlineHelpText>Price the broker is looking for</inlineHelpText>
    <label>Target Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>