unpackaged/main/default/objects/Case/fields/Time_in_Queue__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Queue__c</fullName>
    <description>How long this Case was under the queue before being assigned to an agent. Time tracked in business minutes.
Updated via flow which is triggered when case ownership changes from Queue to User</description>
    <inlineHelpText>How long this Case was under the queue before being assigned to an agent. Time tracked in business minutes</inlineHelpText>
    <label>Time in Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>