unpackaged/main/default/objects/Case/fields/Times_re_opened__c.field-meta.xml
<CustomField>
    <fullName>Times_re_opened__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks how many times case was re-opened</description>
    <inlineHelpText>How many times case was re-opened</inlineHelpText>
    <label>Times re-opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>