unpackaged/main/default/objects/Case/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <formula>TODAY()</formula>
    <label>Today&#39;s Date</label>
    <type>Date</type>
</CustomField>