unpackaged/main/default/objects/Case/fields/Total_Financial_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Loss__c</fullName>
    <formula>Financial_Redress__c  +   Premium_Write_off__c  +  Claims_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums the Financial Redress, Premium Write off and Claims Costs</inlineHelpText>
    <label>Total Financial Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>