unpackaged/main/default/objects/Case/fields/Total_Outgoing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Total_Outgoing_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will be populated by flow which will count total number of outgoing emails for the related case</description>
    <inlineHelpText>Total sent emails</inlineHelpText>
    <label>Total Outgoing Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>