unpackaged/main/default/objects/Case/fields/Trailer_Special_Types__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Special_Types__c</fullName>
    <inlineHelpText>Trailer/Special Types file link</inlineHelpText>
    <label>Trailer/Special Types</label>
    <type>Url</type>
</CustomField>