unpackaged/main/default/objects/Case/fields/Vehicle_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Schedule__c</fullName>
    <inlineHelpText>Vehicle Schedule file link</inlineHelpText>
    <label>Vehicle Schedule</label>
    <type>Url</type>
</CustomField>