unpackaged/main/default/objects/Case/fields/Written_off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Written_off_Amount__c</fullName>
    <label>Written off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>