unpackaged/main/default/objects/Case/recordTypes/Broker_Questions.recordType-meta.xml
<RecordType>
    <fullName>Broker_Questions</fullName>
    <active>true</active>
    <businessProcess>Broker Questions Management</businessProcess>
    <description>Queries submitted by the broker partners</description>
    <label>Broker Questions</label>
</RecordType>