unpackaged/main/default/objects/Case/recordTypes/Claims.recordType-meta.xml
<RecordType>
    <fullName>Claims</fullName>
    <active>false</active>
    <businessProcess>Claim Management</businessProcess>
    <description>Claims record type.</description>
    <label>Claims</label>
</RecordType>