unpackaged/main/default/objects/Case/recordTypes/Failed_Instalments.recordType-meta.xml
<RecordType>
    <fullName>Failed_Instalments</fullName>
    <active>true</active>
    <businessProcess>Failed Instalment Management</businessProcess>
    <description>Record type to help manage and track work related to failed instalment payments</description>
    <label>Failed Instalments</label>
</RecordType>