unpackaged/main/default/objects/Case/recordTypes/Failed_Renewals.recordType-meta.xml
<RecordType>
    <fullName>Failed_Renewals</fullName>
    <active>true</active>
    <businessProcess>Failed Renewal Management</businessProcess>
    <description>Record type to help manage and track work related to failed renewal payments</description>
    <label>Failed Renewals</label>
</RecordType>