unpackaged/main/default/objects/Case/recordTypes/Instanda_Correspondence.recordType-meta.xml
<RecordType>
    <fullName>Instanda_Correspondence</fullName>
    <active>false</active>
    <businessProcess>Correspondence</businessProcess>
    <label>Instanda Correspondence</label>
</RecordType>