unpackaged/main/default/objects/Case/recordTypes/Manual_Claim.recordType-meta.xml
<RecordType>
    <fullName>Manual_Claim</fullName>
    <active>false</active>
    <businessProcess>Claim Management</businessProcess>
    <description>RT to store communication for claims</description>
    <label>Manual Claim</label>
</RecordType>