unpackaged/main/default/objects/Case/recordTypes/Mini_Fleet_Queries.recordType-meta.xml
<RecordType>
    <fullName>Mini_Fleet_Queries</fullName>
    <active>true</active>
    <businessProcess>Mini Fleet Query Management</businessProcess>
    <description>Queries about mini fleet insurance policies</description>
    <label>Mini Fleet Queries</label>
</RecordType>