unpackaged/main/default/objects/Case/recordTypes/Partner_Queries.recordType-meta.xml
<RecordType>
    <fullName>Partner_Queries</fullName>
    <active>true</active>
    <businessProcess>Broker Questions Management</businessProcess>
    <description>Record type to help manage queries coming in from various partners we&#39;re working with (i.e. Tide)</description>
    <label>Partner Queries</label>
</RecordType>