unpackaged/main/default/objects/Case/recordTypes/Questions.recordType-meta.xml
<RecordType>
    <fullName>Questions</fullName>
    <active>true</active>
    <businessProcess>Questions Management</businessProcess>
    <description>Questions record type.</description>
    <label>Questions</label>
</RecordType>