unpackaged/main/default/objects/Case/validationRules/CantMergeCases.validationRule-meta.xml
<ValidationRule>
    <fullName>CantMergeCases</fullName>
    <active>true</active>
    <description>Use this validation rule to prevent users from merging cases</description>
    <errorConditionFormula>AND(

 ISPICKVAL(Status, &quot;Merged&quot;),
 NOT($Permission.Allow_Merge_Cases)

)</errorConditionFormula>
    <errorMessage>You don&#39;t have permission to merge cases</errorMessage>
</ValidationRule>