unpackaged/main/default/objects/Case/validationRules/Case_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Owner</fullName>
    <active>true</active>
    <description>Send for Authorization Validation</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Claims&#39; &amp;&amp;  LEFT(OwnerId,3) = &#39;00G&#39; &amp;&amp;  TEXT(Status) = &#39;Send for Authorization&#39; &amp;&amp; ISCHANGED(Status) = TRUE</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please assign the case to yourself before sending for authorization.</errorMessage>
</ValidationRule>