unpackaged/main/default/objects/Case/validationRules/CaseReasonCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseReasonCantBeBlank</fullName>
    <active>true</active>
    <description>This is to ensure Case Reason is populated before it is closed</description>
    <errorConditionFormula>AND(
  
   RecordType.DeveloperName = &quot;Broker_Questions&quot;,
   ISPICKVAL(Status, &#39;Closed&#39;),
   IF(ISPICKVAL(Reason, &quot;&quot;), true,false) 
 

 )</errorConditionFormula>
    <errorDisplayField>Reason</errorDisplayField>
    <errorMessage>Please provide Case reason</errorMessage>
</ValidationRule>