unpackaged/main/default/objects/Case/validationRules/CaseSubReasonCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseSubReasonCantBeBlank</fullName>
    <active>false</active>
    <description>This is to ensure we capture more detail related to Case Reason</description>
    <errorConditionFormula>AND(
      RecordType.Name = &#39;Questions&#39;,
      ISPICKVAL(Status, &#39;Closed&#39;),
      NOT(ISPICKVAL(Reason, &quot;&quot;)),
      CreatedDate &gt; DATETIMEVALUE(&quot;2025-10-23 00:00:00&quot;),
      ISBLANK(TEXT(Case_Sub_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Case_Sub_Reason__c</errorDisplayField>
    <errorMessage>Please provide Case Sub-Reason</errorMessage>
</ValidationRule>