unpackaged/main/default/objects/Case/validationRules/CompaintsMustHaveAssignedAgentBe4Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>CompaintsMustHaveAssignedAgentBe4Closing</fullName>
    <active>true</active>
    <description>This validation rules will ensure that every Complaint record type case is assigned to an agent before it can be closed.</description>
    <errorConditionFormula>AND(

     RecordType.DeveloperName = &#39;Complaints&#39;,
     OR(

        ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
        ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
        ISPICKVAL(Status, &#39;Closed - Redirected&#39;)

          ),

      IF(BEGINS (OwnerId ,&quot;00G&quot;),true,false),
       $User.Id &lt;&gt; &#39;0054K00000460C3&#39;



)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Case must be assigned to an agent to be closed</errorMessage>
</ValidationRule>