unpackaged/main/default/objects/Case/validationRules/ComplaintAdditionlProductCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintAdditionlProductCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Additional Product field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &quot;Complaints&quot;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)

),
ISPICKVAL( Additional_Products__c , &quot;&quot;)


)</errorConditionFormula>
    <errorDisplayField>Additional_Products__c</errorDisplayField>
    <errorMessage>Make sure Additional Product field is completed</errorMessage>
</ValidationRule>