unpackaged/main/default/objects/Case/validationRules/ComplaintBrandCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintBrandCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Complaint Brand field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL( Complaint_Brand__c , &quot;&quot;)

)</errorConditionFormula>
    <errorDisplayField>Complaint_Brand__c</errorDisplayField>
    <errorMessage>Complaint Brand cannot be blank</errorMessage>
</ValidationRule>