unpackaged/main/default/objects/Case/validationRules/ComplaintCallsPointNotesCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintCallsPointNotesCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Complaint Points, Investigation Notes and Escalated Call Number fields are populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

OR(

ISBLANK( Complaint_Points__c ),
ISBLANK( Escalated_call_number_s__c ),
ISBLANK( Investigation__c )
)

)</errorConditionFormula>
    <errorMessage>Make sure Complaint Points, Escalated Call Number and Investigation Notes fields are completed</errorMessage>
</ValidationRule>