unpackaged/main/default/objects/Case/validationRules/ComplaintChannelCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintChannelCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Channel field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL(Channel__c, &quot;&quot;)

)</errorConditionFormula>
    <errorDisplayField>Channel__c</errorDisplayField>
    <errorMessage>Channel cannot be blank</errorMessage>
</ValidationRule>