unpackaged/main/default/objects/Case/validationRules/ComplaintContactCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintContactCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Contact field is populated before its being closed</description>
    <errorConditionFormula>AND(
 
    RecordType.DeveloperName = &#39;Complaints&#39;,
    
OR(
     ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
     ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
     ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
   ),

    ISBLANK(ContactId)

)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Contact cannot be blank</errorMessage>
</ValidationRule>