unpackaged/main/default/objects/Case/validationRules/ComplaintDepartmentCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintDepartmentCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Department field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL( Department__c , &quot;&quot;) 

)</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>Department cannot be blank</errorMessage>
</ValidationRule>