unpackaged/main/default/objects/Case/validationRules/ComplaintFCACauseCodeCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintFCACauseCodeCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure FCA Cause Code field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL(  FCA_Cause_Code__c  , &quot;&quot;)

)</errorConditionFormula>
    <errorDisplayField>FCA_Cause_Code__c</errorDisplayField>
    <errorMessage>FCA Cause Code cannot be blank</errorMessage>
</ValidationRule>