unpackaged/main/default/objects/Case/validationRules/ComplaintFCAProdTypeCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintFCAProdTypeCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure FCA Product Type field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL(  FCA_Product_Type__c  , &quot;&quot;)

)</errorConditionFormula>
    <errorDisplayField>FCA_Product_Type__c</errorDisplayField>
    <errorMessage>FCA Product Type cannot be blank</errorMessage>
</ValidationRule>