unpackaged/main/default/objects/Case/validationRules/ComplaintFOSDecisionCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintFOSDecisionCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure FOS description is populated if FOS Escalated = &#39;true&#39; before its being closed</description>
    <errorConditionFormula>AND(

     FOS_Escalation__c = true,
     ISPICKVAL(FOS_decision__c, &quot;&quot; ) 


)</errorConditionFormula>
    <errorDisplayField>FOS_decision__c</errorDisplayField>
    <errorMessage>FOS Decision cannot be blank</errorMessage>
</ValidationRule>