unpackaged/main/default/objects/Case/validationRules/ComplaintHumanErrorCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintHumanErrorCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Human Error field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL(Root_Cause__c, &#39;Human Error&#39;),

ISBLANK( Human_Error__c ) 

)</errorConditionFormula>
    <errorDisplayField>Human_Error__c</errorDisplayField>
    <errorMessage>Human Error cannot be blank</errorMessage>
</ValidationRule>