unpackaged/main/default/objects/Case/validationRules/ComplaintLimitOfIndemnityCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintLimitOfIndemnityCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Limit of Indemnity field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

    OR(
    ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
    ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
    ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

   NOT(
     OR(
    ISPICKVAL( Additional_Products__c, &#39;&#39;),
    ISPICKVAL( Additional_Products__c, &#39;N/A&#39;)
)),

   ISPICKVAL( Limit_of_Indemnity__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Limit_of_Indemnity__c</errorDisplayField>
    <errorMessage>Make sure Limit of Indemnity field is completed</errorMessage>
</ValidationRule>