unpackaged/main/default/objects/Case/validationRules/ComplaintOutcomeSectionFieldsCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintOutcomeSectionFieldsCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Complaint Outcome Section fields are populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

OR(

ISBLANK(Justification_for_Decision__c),
ISBLANK(Financial_Redress__c),
ISBLANK(Resolution_Offered__c),
ISBLANK( Premium_Write_off__c)
)

)</errorConditionFormula>
    <errorMessage>Make sure Complaint Outcome section fields are completed</errorMessage>
</ValidationRule>