unpackaged/main/default/objects/Case/validationRules/ComplaintRootCauseCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintRootCauseCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Root Cause field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISPICKVAL(Root_Cause__c, &quot;&quot;)

)</errorConditionFormula>
    <errorDisplayField>Root_Cause__c</errorDisplayField>
    <errorMessage>Root Cause cannot be blank</errorMessage>
</ValidationRule>