unpackaged/main/default/objects/Case/validationRules/ComplaintTriggerCantBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ComplaintTriggerCantBeBlank</fullName>
    <active>true</active>
    <description>Validation rule to ensure Complaint Trigger field is populated before its being closed</description>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &#39;Complaints&#39;,

OR(
ISPICKVAL(Status, &#39;Closed - Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Not Upheld&#39;),
ISPICKVAL(Status, &#39;Closed - Redirected&#39;)
),

ISBLANK(Complaint_Trigger__c)

)</errorConditionFormula>
    <errorDisplayField>Complaint_Trigger__c</errorDisplayField>
    <errorMessage>Complaint Trigger cannot be blank</errorMessage>
</ValidationRule>